k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: purchase-predict
  labels:
    app: purchase-predict
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pod-purchase-predict
  template:
    metadata:
      labels:
        app: pod-purchase-predict
    spec:
      containers:
      - name: pod-purchase-predict
        # On utilise ton projet ici
        image: gcr.io/rock-task-489910-p9/purchase-predict-api:DOCKER_TAG       
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "0.5G"
            cpu: "0.5"
          limits:
            memory: "1G"
            cpu: "1"
